@@ -22,6 +22,7 @@ DETAILED CHANGES:
 	- ADDED: SetTextLineSpacing.
 	- ADDED: LoadSoundAlias and UnloadSoundAlias.
 	- ADDED: GetApplicationDirectory.
+	- FIXED: Snake example after Vector2Angle change.
 
 ------------------------------------------------------------------------
 Release:	ReiLua version 0.6.0		Using Raylib 4.5
